# aiorecollect

./: .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements_test.txt
.github/: pull_request_template.md
.github/workflows/: ci.yaml  test.yml
aiorecollect/: __init__.py  client.py  errors.py
examples/: test_client.py
script/: test
tests/: common.py  conftest.py  test_client.py
tests/fixtures/: pickup_data_range_response.json  pickup_data_response.json  pickup_data_response_1.json  pickup_data_response_2.json
